Update index.html for Master Scheduler

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Local Scheduler</title>
+  <title>Master Scheduler</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
@@ -153,4 +154,5 @@
   <!-- App logic -->
   <script src="app.js"></script>
 </body>
+
 </html>
